update .env and budgeting page